--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "vich/uploader-bundle": "^1.15"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
         "symfony/debug-bundle": "^5.1",
