--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
     App\EventSubscriber\AdminUserSubscriber:
         tags:
             - { name: 'doctrine.event_subscriber', connection: 'default' }
+
+    App\EventSubscriber\CreatedAtSubscriber:
+        tags:
+            - { name: 'doctrine.event_subscriber', connection: 'default' }
