--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,7 @@ security:
     providers:
         users_in_db:
             entity:
-                class: 'App\Entity\User'
+                class: 'App\Entity\AdminUser'
                 property: 'username'
     firewalls:
         dev:
@@ -18,6 +18,6 @@ security:
                 authenticators:
                     - App\Security\AppUserAuthenticator
             logout:
-                path: adminLogout
+                path: admin_logout
     access_control:
         - { path: ^/admin, roles: IS_AUTHENTICATED_FULLY }
