add menu and home page AdminController.php

--- a/config/packages/workflow.yaml
+++ b/config/packages/workflow.yaml
@@ -1,6 +1,6 @@
 framework:
     workflows:
-        comment:
+        advert:
             type: state_machine
             audit_trail:
                 enabled: '%kernel.debug%'
