add api platform

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,3 +37,7 @@ services:
     App\EventSubscriber\AdvertAndPicturesSubscriber:
         tags:
             - { name: 'doctrine.event_subscriber', connection: 'default' }
+
+    App\EventSubscriber\ResolvePictureContentUrlSubscriber:
+        tags:
+            - { name: 'EventDispatcher.event_subscriber', connection: 'default'}
