--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/google-mailer": "5.1.*",
         "symfony/http-client": "5.1.*",
         "symfony/intl": "5.1.*",
         "symfony/mailer": "5.1.*",
@@ -39,7 +40,9 @@
         "symfony/web-link": "5.1.*",
         "symfony/workflow": "5.1.*",
         "symfony/yaml": "5.1.*",
+        "twig/cssinliner-extra": "^3.1",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.1",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^1.15"
     },
