--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
+        "symfony/browser-kit": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/expression-language": "5.1.*",
@@ -48,7 +49,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "symfony/browser-kit": "^5.1",
+        "hautelook/alice-bundle": "^2.8",
+        "phpunit/phpunit": "^9",
         "symfony/css-selector": "^5.1",
         "symfony/debug-bundle": "^5.1",
         "symfony/maker-bundle": "^1.0",
